# tp-multithreading

./: LICENSE
TP2/: Task.py  boss.py  client.py  manager.py  minion.py
TP4/: Boss.cpp  CMakeLists.txt  Minion.cpp  Task.hpp  proxy.py
